--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Privacy Policy – Focus Mate</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy | Focus Mate</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -11,58 +11,103 @@
       margin: auto;
       padding: 2rem;
       line-height: 1.6;
-      background-color: #fdfdfd;
-      color: #222;
+      background-color: #f9f9f9;
+      color: #333;
     }
     h1, h2 {
-      color: #4A90E2;
+      color: #2c3e50;
     }
     a {
-      color: #4A90E2;
+      color: #0077cc;
+    }
+    footer {
+      margin-top: 3rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #777;
     }
   </style>
 </head>
 <body>
-  <h1>Privacy Policy for Focus Mate</h1>
+
+  <h1>Privacy Policy</h1>
   <p><strong>Last Updated:</strong> April 23, 2025</p>
 
-  <p>Focus Mate (“we”, “our”, or “us”) is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and protect information about users of the Focus Mate app.</p>
+  <p>
+    Focus Mate ("we", "our", "us") is committed to protecting your privacy. This Privacy Policy outlines how we collect, use, store, and protect your personal data when you use the Focus Mate application ("App").
+  </p>
+  <p>
+    By using Focus Mate, you agree to the collection and use of your data in accordance with this policy.
+  </p>
 
   <h2>1. Information We Collect</h2>
   <ul>
-    <li><strong>User Account Information:</strong> Name, email address, and password (via Firebase Authentication).</li>
-    <li><strong>Optional Info:</strong> Profile image, phone number.</li>
-    <li><strong>Task & Goal Data:</strong> Tasks, notes, goals, and preferences saved by the user.</li>
-    <li><strong>Device Info:</strong> App usage logs, device type, and OS version (anonymized).</li>
-    <li><strong>Voice Input:</strong> Transcriptions of AI assistant requests (processed but not stored permanently).</li>
+    <li><strong>Personal Information:</strong> We collect name, email address, and password (stored securely) through Firebase Authentication. You may also upload a profile picture and username.</li>
+    <li><strong>Task & Goal Data:</strong> We store your tasks, notes, goals, and related metadata.</li>
+    <li><strong>Device Info:</strong> Anonymous data about your device, OS, and app usage is collected for performance monitoring.</li>
+    <li><strong>Voice Input:</strong> Used with our AI assistant and only processed temporarily — not permanently stored.</li>
   </ul>
 
   <h2>2. How We Use Your Data</h2>
   <ul>
-    <li>To create and manage your account.</li>
-    <li>To sync your tasks, goals, and settings across devices.</li>
-    <li>To improve functionality and performance of the app.</li>
+    <li>To provide core features like authentication and task saving</li>
+    <li>To personalize your experience</li>
+    <li>To analyze usage and improve app performance</li>
+    <li>To enable voice assistant functionality</li>
+    <li>To keep your data available offline when needed</li>
   </ul>
 
   <h2>3. Data Security</h2>
-  <p>We use Firebase Authentication and Firestore to securely store data. All data is encrypted in transit using industry-standard protocols.</p>
+  <p>
+    We use secure technologies like HTTPS, Firebase Authentication, and Firestore encryption to protect your data. All profile images are securely uploaded to Supabase.
+  </p>
 
   <h2>4. Guest Mode</h2>
-  <p>Guest mode allows you to use the app without an account. Your data is stored locally and not uploaded to our servers.</p>
+  <p>
+    You can use Focus Mate in Guest Mode without signing in. In this mode, your data remains local to your device and is not synced to the cloud.
+  </p>
 
   <h2>5. Sharing and Disclosure</h2>
-  <p>We do not sell or share your personal data with third parties except for essential services like:</p>
+  <p>
+    We do not sell or rent your personal data. We may share data with:
+  </p>
   <ul>
-    <li>Firebase (authentication, database)</li>
-    <li>Google APIs (voice-to-text services)</li>
+    <li>Trusted services like Firebase and Supabase, under their privacy terms</li>
+    <li>Authorities if required for legal compliance</li>
   </ul>
 
-  <h2>6. Account & Data Deletion</h2>
-  <p>To request deletion of your account or data, please contact us at <strong>support@focusmate-app.com</strong>. Requests are handled within 7 business days.</p>
+  <h2>6. Data Retention and Deletion</h2>
+  <p>
+    We retain your data only as long as necessary. You can request account deletion at any time by contacting us.
+  </p>
+  <p>
+    To delete your account, email us at <a href="mailto:support@focusmate-app.com">support@focusmate-app.com</a>. We’ll permanently delete your data within 7 business days.
+  </p>
 
-  <h2>7. Changes to This Policy</h2>
-  <p>We may update this policy occasionally. Major changes will be communicated via app notifications or email (if provided).</p>
+  <h2>7. Your Rights</h2>
+  <ul>
+    <li>You can view and update your profile information</li>
+    <li>You can request to delete your account and all stored data</li>
+    <li>You can request a copy of your data</li>
+  </ul>
 
-  <p>If you have questions, contact us at <strong>support@focusmate-app.com</strong>.</p>
+  <h2>8. Changes to This Policy</h2>
+  <p>
+    We may update this Privacy Policy as needed. If there are major changes, we’ll notify you via email or an in-app message.
+  </p>
+
+  <h2>9. Contact Us</h2>
+  <p>
+    Have questions or concerns about this policy? Reach out to us:
+  </p>
+  <p>
+    <strong>Email:</strong> <a href="mailto:support@focusmate-app.com">support@focusmate-app.com</a><br />
+    <strong>Mailing Address:</strong> [Insert your client’s or company’s mailing address here]
+  </p>
+
+  <footer>
+    &copy; 2025 Focus Mate. All rights reserved.
+  </footer>
+
 </body>
 </html>
