--- a/index.html
+++ b/index.html
@@ -6,108 +6,154 @@
   <title>Privacy Policy | Focus Mate</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      max-width: 800px;
-      margin: auto;
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: 0 auto;
       padding: 2rem;
-      line-height: 1.6;
       background-color: #f9f9f9;
       color: #333;
+      line-height: 1.6;
     }
-    h1, h2 {
+    h1, h2, h3 {
       color: #2c3e50;
     }
-    a {
-      color: #0077cc;
+    ul {
+      margin-top: 0;
+      padding-left: 1.2rem;
     }
-    footer {
-      margin-top: 3rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #777;
+    li {
+      margin-bottom: 0.5rem;
+    }
+    hr {
+      margin: 2rem 0;
+    }
+    a {
+      color: #007bff;
     }
   </style>
 </head>
 <body>
 
-  <h1>Privacy Policy</h1>
+  <h1>Focus Mate Privacy Policy</h1>
   <p><strong>Last Updated:</strong> April 23, 2025</p>
 
   <p>
     Focus Mate ("we", "our", "us") is committed to protecting your privacy. This Privacy Policy outlines how we collect, use, store, and protect your personal data when you use the Focus Mate application ("App").
   </p>
+
   <p>
     By using Focus Mate, you agree to the collection and use of your data in accordance with this policy.
   </p>
 
+  <hr />
+
   <h2>1. Information We Collect</h2>
+  <p>We collect various types of information to provide and improve our service to you. The types of data we collect include:</p>
+
   <ul>
-    <li><strong>Personal Information:</strong> We collect name, email address, and password (stored securely) through Firebase Authentication. You may also upload a profile picture and username.</li>
-    <li><strong>Task & Goal Data:</strong> We store your tasks, notes, goals, and related metadata.</li>
-    <li><strong>Device Info:</strong> Anonymous data about your device, OS, and app usage is collected for performance monitoring.</li>
-    <li><strong>Voice Input:</strong> Used with our AI assistant and only processed temporarily — not permanently stored.</li>
+    <li><strong>Personal Information:</strong>
+      <ul>
+        <li><strong>Account Information:</strong> When you sign up or log in via <strong>Firebase Authentication</strong>, we collect your name, email address, and password (stored securely).</li>
+        <li><strong>Profile Information:</strong> You may choose to update your profile with additional details like a profile image and username.</li>
+        <li><strong>Optional Information:</strong> Users may also provide a phone number (optional).</li>
+      </ul>
+    </li>
+    <li><strong>Task & Goal Data:</strong>
+      <ul>
+        <li>We store tasks, goals, notes, and their associated data for use within the app.</li>
+      </ul>
+    </li>
+    <li><strong>Device Information:</strong>
+      <ul>
+        <li>We collect anonymous device information including your device type, operating system, and app usage statistics for app performance improvement and crash analytics.</li>
+      </ul>
+    </li>
+    <li><strong>Voice Input:</strong>
+      <ul>
+        <li>If you use the <strong>AI Assistant</strong> feature, we may collect your voice input, which is transcribed into text using <strong>speech-to-text services</strong>. This data is used only for processing your queries and is not stored permanently.</li>
+      </ul>
+    </li>
   </ul>
+
+  <hr />
 
   <h2>2. How We Use Your Data</h2>
+  <p>We use the collected data for various purposes, including:</p>
+
   <ul>
-    <li>To provide core features like authentication and task saving</li>
-    <li>To personalize your experience</li>
-    <li>To analyze usage and improve app performance</li>
-    <li>To enable voice assistant functionality</li>
-    <li>To keep your data available offline when needed</li>
+    <li>To provide and maintain the App, including user account management and authentication.</li>
+    <li>To personalize your experience, such as saving your tasks, notes, and goals.</li>
+    <li>To analyze usage patterns and improve the performance and functionality of the App.</li>
+    <li>To provide you with responses and suggestions through the <strong>AI Assistant</strong> feature.</li>
+    <li>To send you updates, including new features, bug fixes, and security patches.</li>
+    <li>To provide a smooth user experience even in <strong>offline mode</strong>, by syncing tasks, notes, and progress.</li>
   </ul>
+
+  <hr />
 
   <h2>3. Data Security</h2>
-  <p>
-    We use secure technologies like HTTPS, Firebase Authentication, and Firestore encryption to protect your data. All profile images are securely uploaded to Supabase.
-  </p>
+  <p>We take the security of your data seriously. We implement industry-standard security measures to protect your personal information from unauthorized access, alteration, disclosure, or destruction. Specifically:</p>
+
+  <ul>
+    <li><strong>Encrypted Data:</strong> All data transmitted between your device and our servers is encrypted via HTTPS.</li>
+    <li><strong>Data Storage:</strong> Personal data is securely stored in <strong>Firebase Firestore</strong> and image data in <strong>Supabase</strong>.</li>
+    <li><strong>Authentication:</strong> Your account is authenticated using <strong>Firebase Authentication</strong>, which uses secure methods to protect your login credentials.</li>
+  </ul>
+
+  <hr />
 
   <h2>4. Guest Mode</h2>
-  <p>
-    You can use Focus Mate in Guest Mode without signing in. In this mode, your data remains local to your device and is not synced to the cloud.
-  </p>
+  <p>You can use Focus Mate in <strong>Guest Mode</strong> without creating an account. In Guest Mode, your data is not saved to the cloud, and tasks or notes are stored only locally on your device. You may later choose to create an account and sync your data to the cloud.</p>
+
+  <hr />
 
   <h2>5. Sharing and Disclosure</h2>
-  <p>
-    We do not sell or rent your personal data. We may share data with:
-  </p>
+  <p>We do not sell, rent, or share your personal data with third parties, except in the following cases:</p>
+
   <ul>
-    <li>Trusted services like Firebase and Supabase, under their privacy terms</li>
-    <li>Authorities if required for legal compliance</li>
+    <li><strong>Service Providers:</strong> We use trusted third-party service providers like Firebase (for authentication and database) and Supabase (for image storage), which have their own privacy policies.</li>
+    <li><strong>Legal Compliance:</strong> If required by law, we may disclose your information to comply with legal obligations or to protect the rights, property, or safety of Focus Mate, its users, or others.</li>
   </ul>
 
-  <h2>6. Data Retention and Deletion</h2>
-  <p>
-    We retain your data only as long as necessary. You can request account deletion at any time by contacting us.
-  </p>
-  <p>
-    To delete your account, email us at <a href="mailto:support@focusmate-app.com">support@focusmate-app.com</a>. We’ll permanently delete your data within 7 business days.
-  </p>
+  <hr />
 
-  <h2>7. Your Rights</h2>
+  <h2>6. Permissions and Consent</h2>
+  <p>We request permissions at runtime for sensitive features (microphone). Before any such data is accessed, we will show a clear explanation and ask for your consent.</p>
+
+  <hr />
+
+  <h2>7. Data Retention and Deletion</h2>
+  <p>We retain your personal information only for as long as necessary to provide you with the services. You can delete your account and all associated data at any time by following the steps below:</p>
+
   <ul>
-    <li>You can view and update your profile information</li>
-    <li>You can request to delete your account and all stored data</li>
-    <li>You can request a copy of your data</li>
+    <li><strong>Delete Account:</strong> To delete your account, please contact us at <a href="mailto:Yummin.shin@gmail.com">Yummin.shin@gmail.com</a>. All personal data associated with your account will be permanently deleted within 7 business days.</li>
   </ul>
 
-  <h2>8. Changes to This Policy</h2>
-  <p>
-    We may update this Privacy Policy as needed. If there are major changes, we’ll notify you via email or an in-app message.
-  </p>
+  <hr />
 
-  <h2>9. Contact Us</h2>
-  <p>
-    Have questions or concerns about this policy? Reach out to us:
-  </p>
-  <p>
-    <strong>Email:</strong> <a href="mailto:support@focusmate-app.com">support@focusmate-app.com</a><br />
-    <strong>Mailing Address:</strong> [Insert your client’s or company’s mailing address here]
-  </p>
+  <h2>8. Children's Privacy</h2>
+  <p>This app is not directed to children under 13. We do not knowingly collect data from children under 13 without parental consent.</p>
+  <hr />
 
-  <footer>
-    &copy; 2025 Focus Mate. All rights reserved.
-  </footer>
+  <h2>9. Your Rights</h2>
+  <p>As a user, you have the following rights:</p>
+
+  <ul>
+    <li><strong>Access Your Data:</strong> You can access and update your profile information at any time within the app.</li>
+    <li><strong>Request Deletion:</strong> You can request the deletion of your account and associated data.</li>
+    <li><strong>Data Portability:</strong> You can request a copy of your data in a machine-readable format.</li>
+  </ul>
+
+  <hr />
+
+  <h2>10. Changes to This Privacy Policy</h2>
+  <p>We may update this Privacy Policy periodically to reflect changes in our practices or for other operational, legal, or regulatory reasons. If we make significant changes, we will notify you by email or through a notification within the App.</p>
+
+  <hr />
+
+  <h2>11. Contact Us</h2>
+  <p>If you have any questions about this Privacy Policy or need to request data deletion, please contact us at:</p>
+  <p><strong>Email:</strong> <a href="mailto:">Yummin.shin@gmail.com</a></p>
 
 </body>
 </html>
