--- a/delete-account.html
+++ b/delete-account.html
@@ -2,23 +2,98 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Delete Account - Focus Mate</title>
+  <title>Delete Your Account | Focus Mate</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Request deletion of your Focus Mate account and personal data.">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+      padding: 0 20px;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 60px auto;
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+    }
+
+    h1 {
+      color: #222;
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    h2 {
+      font-size: 1.3rem;
+      margin-top: 30px;
+      color: #444;
+    }
+
+    p {
+      margin-bottom: 16px;
+    }
+
+    ul {
+      margin: 10px 0 20px 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    a {
+      color: #0073e6;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .footer {
+      margin-top: 40px;
+      font-size: 0.9rem;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
-  <h1>Delete Your Account - Focus Mate</h1>
-  <p>If you wish to delete your Focus Mate account and all associated data, please email us at <a href="mailto:Yummin.shin@gmail.com">Yummin.shin@gmail.com</a> using the email you registered with.</p>
-  <p>We will process your request within 7 business days and permanently delete your account and associated data.</p>
+  <div class="container">
+    <h1>Delete Your Account</h1>
+    <p>
+      We're sorry to see you go. If you would like to permanently delete your Focus Mate account and all associated data, please email us at
+      <a href="mailto:Yummin.shin@gmail.com">Yummin.shin@gmail.com</a> using the email address associated with your account.
+    </p>
 
-  <h2>What Data Will Be Deleted?</h2>
-  <ul>
-    <li>Your email address and profile information</li>
-    <li>All your tasks, goals, and notes</li>
-    <li>Any synced data stored in our database</li>
-  </ul>
+    <h2>What will be deleted?</h2>
+    <ul>
+      <li>Your email and profile information</li>
+      <li>All saved tasks, goals, notes, and preferences</li>
+      <li>Any synced data associated with your account</li>
+    </ul>
 
-  <h2>Data Retention</h2>
-  <p>No data will be retained after deletion. Backups, if any, will be purged within 7 days.</p>
+    <h2>Data Retention</h2>
+    <p>
+      After your request is confirmed, your data will be deleted from our servers within <strong>7 business days</strong>. Any backups containing your data will also be purged during this period.
+    </p>
 
-  <p><strong>Developer:</strong> Focus Mate Team</p>
+    <h2>Need Help?</h2>
+    <p>
+      If you have questions or concerns about your data or this process, don't hesitate to contact us at
+      <a href="mailto:Yummin.shin@gmail.com">Yummin.shin@gmail.com</a>.
+    </p>
+
+    <div class="footer">
+      &copy; 2025 Focus Mate. All rights reserved.
+    </div>
+  </div>
 </body>
 </html>
