--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <p>We retain your personal information only for as long as necessary to provide you with the services. You can delete your account and all associated data at any time by following the steps below:</p>
 
   <ul>
-    <li><strong>Delete Account:</strong> To delete your account, please contact us at <a href="mailto:Yummin.shin@gmail.com">Yummin.shin@gmail.com</a>. All personal data associated with your account will be permanently deleted within 7 business days.</li>
+    <li><strong>Delete Account:</strong> To delete your account and all associated data, please visit the following link: <a href="https://dikshitbhatta.github.io/focusmate-privacy-policy/delete-account.html" target="_blank">Delete Your Account</a>. All personal data associated with your account will be permanently deleted within 7 business days.</li>
   </ul>
 
   <hr />
@@ -154,6 +154,9 @@
   <h2>11. Contact Us</h2>
   <p>If you have any questions about this Privacy Policy or need to request data deletion, please contact us at:</p>
   <p><strong>Email:</strong> <a href="mailto:">Yummin.shin@gmail.com</a></p>
+  <div class="footer">
+      &copy; 2025 Focus Mate. All rights reserved.
+    </div>
 
 </body>
 </html>
