--- a/index.html
+++ b/index.html
@@ -14,26 +14,61 @@
       color: #333;
       line-height: 1.6;
     }
+    .container {
+      max-width: 800px;
+      margin: 60px auto;
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+    }
     h1, h2, h3 {
       color: #2c3e50;
+      font-weight: bold;
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 1rem;
+    }
+    h2 {
+      color: #34495e;
+      margin-top: 2rem;
+    }
+    p {
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+      text-align: justify;
     }
     ul {
       margin-top: 0;
-      padding-left: 1.2rem;
+      padding-left: 1.5rem;
+      list-style-type: disc;
     }
     li {
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.8rem;
     }
     hr {
       margin: 2rem 0;
+      border: 0;
+      border-top: 2px solid #ddd;
     }
     a {
       color: #007bff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: #777;
     }
   </style>
 </head>
 <body>
-
+  <div class="container">
   <h1>Focus Mate Privacy Policy</h1>
   <p><strong>Last Updated:</strong> April 23, 2025</p>
 
@@ -157,6 +192,6 @@
   <div class="footer">
       &copy; 2025 Focus Mate. All rights reserved.
     </div>
-
+  </div>
 </body>
 </html>
