--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     h1, h2, h3 {
       color: #2c3e50;
       font-weight: bold;
-      text-align: center;
+      text-align: left;
     }
     h1 {
       margin-bottom: 1rem;
