--- a/focusmatedeleteaccount.html
+++ b/focusmatedeleteaccount.html
@@ -91,7 +91,7 @@
     </p>
 
     <p>
-      View our full <a href="https://dikshitbhatta.github.io/focusmate-privacy-policy/">Privacy Policy</a>.
+      View our full <a href="https://dikshitbhatta.github.io/focusmate-privacy-policy/focusmateprivacypolicy.html">Privacy Policy</a>.
     </p>
 
     <div class="footer">
